适配所有彩站app

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #FIREFOX, IE, HTMLUNIT, SAFARI, OPERA, GOOGLECHROME
 coreType=ANDROIDAPP
-appBin=DongFangHongRelease.com.apk
+appBin=YunFeiRelease.com.apk
 noReset=true
 
 
