添加部分线上测试代码

--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #FIREFOX, IE, HTMLUNIT, SAFARI, OPERA, GOOGLECHROME
 coreType=ANDROIDAPP
-appBin=YunFeiRelease.com.apk
+appBin=ZeDeRelease.com
 noReset=true
-
+closeAppium=true
 
