--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #FIREFOX, IE, HTMLUNIT, SAFARI, OPERA, GOOGLECHROME
 coreType=ANDROIDAPP
-appBin=ZeDeRelease.com
+appBin=ZeDeRelease.com.apk
 noReset=true
 closeAppium=true
 
